--- a/app/index.html
+++ b/app/index.html
@@ -6,32 +6,32 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>Mobile App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/app.css"/>
-  <script src="js/default/modernizr.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+      <p>You are using an <strong>outdated</strong> browser. Please upgrade your browser to improve your experience.</p>
   <![endif]-->
 
   <div ng-view></div>
 
-  
-  <ul class="menu">
-    <li><a href="#/home">view1</a></li>
-    <li><a href="#/teste">view2</a></li>
+  <ul class="nav nav-pills">
+      <li><a href="#/home">Home</a></li>
+      <li><a href="#/teste">Teste</a></li>
   </ul>
-  <div>Versão: v<span app-version></span></div>
+  <small class="pull-right">v<span app-version></span></small>
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="js/angular/angular.js"></script>
   <script src="js/angular/angular-route.js"></script>
+  <script src="js/boostrap/bootstrap.min.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
