--- a/app/index.html
+++ b/app/index.html
@@ -3,39 +3,43 @@
 <!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Mobile App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/app.css"/>
-</head>
-<body>
-  <!--[if lt IE 7]>
-      <p>You are using an <strong>outdated</strong> browser. Please upgrade your browser to improve your experience.</p>
-  <![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Mobile App</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/app.css"/>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p>You are using an <strong>outdated</strong> browser. Please upgrade your browser to improve your experience.</p>
+        <![endif]-->
 
-  <div ng-view></div>
+        <div ng-view></div>
+        
+        <footer class="clearfix">
+            <ul class="nav navbar navbar-inverse navbar-fixed-bottom text-center">
+                <li class="col-xs-4"><a href="#/home"><i class="fa fa-home fa-2x"></i></a></li>
+                <li class="col-xs-4"><a href="#/teste"><i class="fa fa-info fa-2x"></i></a></li>
+                <li class="col-xs-4"><a href="#/teste2"><i class="fa fa-comment-o fa-2x"></i></a></li>
+                <small class="col-xs-12 text-info">v<span app-version></span></small>
+            </ul>
+        </footer>
 
-  <ul class="nav nav-pills">
-      <li><a href="#/home">Home</a></li>
-      <li><a href="#/teste">Teste</a></li>
-  </ul>
-  <small class="pull-right">v<span app-version></span></small>
-
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="js/angular/angular.js"></script>
-  <script src="js/angular/angular-route.js"></script>
-  <script src="js/boostrap/bootstrap.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-</body>
+        <!-- In production use:
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
+        -->
+        <script src="js/angular/angular.js"></script>
+        <script src="js/angular/angular-route.js"></script>
+        <script src="js/bootstrap/bootstrap.min.js"></script>
+        <script src="js/app.js"></script>
+        <script src="js/services.js"></script>
+        <script src="js/controllers.js"></script>
+        <script src="js/filters.js"></script>
+        <script src="js/directives.js"></script>
+    </body>
 </html>
